# hybrid-llm-classifier

./: .cursorrules  .gitignore  .pylintrc  BENCHMARKS.md  Hybrid LLM Classifier - Git Ingest.md  LICENSE  Makefile  Modelfile  README.md  environment.yml  logging_config.json  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
benchmark_results/: benchmark_results_20250207_131643.json
docs/: Technical Preview Report - For Alex Hustler.md
scripts/: run_benchmarks.py  test_performance.py
src/app/: __init__.py  config.py  main.py
src/app/auth/: __init__.py  jwt.py
src/app/middleware/: __init__.py  auth.py  rate_limit.py
src/app/models/: __init__.py  classifier.py
src/app/routers/: __init__.py  auth.py  classifier.py
src/app/utils/: __init__.py  auth.py
tests/: __init__.py  benchmark_classifier.py  conftest.py  results.txt  test_auth_middleware.py  test_benchmark.py  test_classifier.py  test_results.txt
